force-app/main/default/objects/Scoring_Config__mdt/Scoring_Config__mdt.object-meta.xml
<CustomObject>
    <label>Scoring Config</label>
    <pluralLabel>Scoring Configs</pluralLabel>
</CustomObject>