force-app/main/default/objects/Scoring_Config__mdt/fields/Discount_Conflicting__c.field-meta.xml
<CustomField>
    <fullName>Discount_Conflicting__c</fullName>
    <label>Discount Conflicting</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>2</scale>
    <description>Weight multiplier for criteria where the CV contradicts itself.</description>
</CustomField>