force-app/main/default/objects/Scoring_Config__mdt/fields/Discount_Inferred__c.field-meta.xml
<CustomField>
    <fullName>Discount_Inferred__c</fullName>
    <label>Discount Inferred</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>2</scale>
    <description>Weight multiplier for criteria backed by inferred (deduced) evidence.</description>
</CustomField>