force-app/main/default/objects/Scoring_Config__mdt/fields/Discount_Missing__c.field-meta.xml
<CustomField>
    <fullName>Discount_Missing__c</fullName>
    <label>Discount Missing</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>2</scale>
    <description>Weight multiplier for criteria with no supporting evidence (unknown).</description>
</CustomField>