force-app/main/default/objects/Scoring_Config__mdt/fields/Discount_Stated__c.field-meta.xml
<CustomField>
    <fullName>Discount_Stated__c</fullName>
    <label>Discount Stated</label>
    <type>Number</type>
    <precision>4</precision>
    <scale>2</scale>
    <description>Weight multiplier for criteria backed by explicitly stated evidence.</description>
</CustomField>