force-app/main/default/objects/Scoring_Config__mdt/fields/Strong_Match_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Strong_Match_Threshold__c</fullName>
    <label>Strong Match Threshold</label>
    <type>Number</type>
    <precision>5</precision>
    <scale>2</scale>
    <description>Demonstrated score at or above which a candidate is a strong match; below it is best-available.</description>
</CustomField>